@@ -9,6 +9,12 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  08 Jun 2004; Marius Mauch <genone@gentoo.org> pym/portage.py:
+  Added the collision-protect feature that prevents packages from
+  overwriting files they don't own. Has to be enabled with 
+  FEATURES=collision-protect  as it needs more testing before it 
+  can be enabled by default (bug #28228).
+
   05 Jun 2004; Marius Mauch <genone@gentoo.org> bin/ebuild.sh:
   Fix rpm support by changing rpm to rpmbuild (bug #13508).
 
